--- a/Reports/test-output/old/Default suite/classes.html
+++ b/Reports/test-output/old/Default suite/classes.html
@@ -4,15 +4,218 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.reports.testcases.TestCustomReportBuilders</td>
+<td>com.reports.testcases.TestFinancialRevenueReportBuilder</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testingAllTheNagativeCases</td>
+<td>testFromDateFieldBlank_text</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkFavouriteReportsForDefaultDate_option1</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToDateFieldBlank_cvs</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForTodayOptions</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkFavouriteReportsForDefaultDate_option3</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testDateFieldsBlank_favSaveButton</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkFavouriteReportsForDefaultDate_option2</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>chekForCorporateOffice</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testDateFieldsBlank_csv</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForFromPastToFuture_csv</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testFromDateFieldBlank_cvs</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkForPreviousFinancialYear</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyAllowedReportDurationDropdown</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkAutoCustomDateOption</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkForThisFinancialYear</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test3MonthText</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test3MonthCsv</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToDateFieldBlank_text</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testFromDateFieldBlank_pdf</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testFromDateFieldBlank_favSaveButton</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForFromPastToFuture_text</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>check3MonthFavPDFReport</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForFromPastToFuture_fav</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testDateFieldsBlank_text</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForPreviousMonthOptions</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>test3MonthPdf</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>createFavouritesForAllowedReportDurationoption</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>vreifyForYesterdaysDateOnReFreshing</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testDateFieldsBlank_pdf</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>chekForCorporateOffice_fav1</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>chekForCorporateOffice_fav2</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>check2MonthFavPDFReport</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkFavouriteReportsForDefaultDate_optionSelect</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>chekForCorporateOffice_fav3</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForThisMonthOptions</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>pdfTest</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForYesterdayOptions</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>switchToTheUser</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyDateFieldsForFromPastToFuture_pdf</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToDateFieldBlank_favSaveButton</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>check1MonthFavPDFReport</td>
+<td>Financial Reports </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testToDateFieldBlank_pdf</td>
+<td>Financial Reports </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
